--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NFCSample</string>
     <string name="read_nfc_btn_txt">Read NFC</string>
     <string name="write_nfc_btn_txt">Write NFC</string>
+    <string name="send_message">Send Message</string>
 </resources>
